--- a/poster.Rmd
+++ b/poster.Rmd
@@ -1,24 +1,36 @@
 ---
 title: Threat Intelligence
+poster_height: "56in"
+poster_width: "54in"
 author:
   - name: I2z1
     affil: 1
     email: i2z1@ddslab.ru
     orcid: 12345
     main: true
+  - name: sanches23rx
+    affil: 1
+    email: rudzsan@gmail.com
+    main: true
 affiliation:
   - num: 1
     address: ИКБЦТ, РТУ МИРЭА
+font_family: 'tahoma'
+primary_colour: "#778899"
+secondary_colour: "#4682B4"
+main_width: 0.3
+main_fontfamily: "consolas"
 main_findings:
   - "Threat Intelligence"
   - '![](https://raw.githubusercontent.com/Sanches23rx/TIPoster/sanches23rx/images/MIREA_Gerb_Colour.png){.main_pic}'
 logoleft_name: '![](https://raw.githubusercontent.com/Sanches23rx/TIPoster/sanches23rx/images/KBSP.png){.main-img-left}'
 #logoright_name: '![](https://raw.githubusercontent.com/brentthorne/posterdown/master/images/betterhexlogo.png){.main-img-right}'
+body_bgcol: "f7fafe"
 output: 
-  posterdown::posterdown_betterland:
+  posterdown::posterdown_html:
     self_contained: false
     pandoc_args: --mathjax
-    highlight: monochrome
+    highlight: espresso
     number_sections: false
 link-citations: true
 bibliography: packages.bib
@@ -41,65 +53,67 @@ knitr::write_bib(c('posterdown', 'rmarkdown','pagedown'), 'packages.bib')
 
 ## Задачи TI
 
-1. При анализе собственной инфраструктуры и поиску IoC:
-    - TI используется в процессе разведки и сбора данных об уязвимостях и угрозах для получения максимально возможного количества информации о злоумышленниках
-    - В качестве аналитической базы знаний для обнаружения и обработке угроз, формированию рекомендаций по реагированию
+#### 1. При анализе собственной инфраструктуры и поиску IoC:
 
-2. Для организации работы Security Operations Center (SOC):
-    - Повышение качества детектов СЗИ
-    - Ускорение принятия решений при разборе инцидентов ИБ благодаря контексту
-    - Приоритизация угроз и атак в зависимости от критичности индикаторов
+  - TI используется в процессе разведки и сбора данных об уязвимостях и угрозах для получения максимально возможного количества информации о злоумышленниках
+  - В качестве аналитической базы знаний для обнаружения и обработке угроз, формированию рекомендаций по реагированию
+
+#### 2. Для организации работы Security Operations Center (SOC):
+
+  - Повышение качества детектов СЗИ
+  - Ускорение принятия решений при разборе инцидентов ИБ благодаря контексту
+  - Приоритизация угроз и атак в зависимости от критичности индикаторов
 
 
 ## Индикатор компрометации
 
-Объект или артефакт, обнаруженный в ИТ-инфраструктуре компании, наличие которого с высокой долей вероятности может свидетельствовать о готовящейся, совершающейся или уже осуществленной компьютерной атаке
+- Объект или артефакт, обнаруженный в ИТ-инфраструктуре компании, наличие которого с высокой долей вероятности может свидетельствовать о готовящейся, совершающейся или уже осуществленной компьютерной атаке
 
- - хэш-суммы файлов, их имена и расположение
- - IP-адреса
- - DNS-имена серверов в сети Интернет
- - Конкретные URL
- - Названия веток и ключей реестра Windows
+  - хэш-суммы файлов, их имена и расположение
+  - IP-адреса
+  - DNS-имена серверов в сети Интернет
+  - Конкретные URL
+  - Названия веток и ключей реестра Windows
 
 ## Сбор информации
 
-1. Песочницы
-    - Тестирование влияния ВПО и действий атакующих на специально подготовленных средах для выявления слабых точек системы
+**Песочницы** - тестирование влияния ВПО и действий атакующих на специально подготовленных средах для выявления слабых точек системы
     
-2. Ханипоты
-    - Подготовка заведомо уязвимой системы в качестве приманки для выявления инструментов и ТТР, которыми пользуются злоумышленники
+**Ханипоты** - подготовка заведомо уязвимой системы в качестве приманки для выявления инструментов и ТТР, которыми пользуются злоумышленники
     
-3. Анализ тематических форумов (Darknet)
-    - Проникновение в закрытые источники, такие как Darknet веб-форумы для извлечения информации, которой делятся злоумышленники на “своих” ресурсах
+**Анализ тематических форумов (Darknet)** - проникновение в закрытые источники, такие как Darknet веб-форумы для извлечения информации, которой делятся злоумышленники на “своих” ресурсах
     
-4. Материалы расследований
-    - Обработка отчетов вендоров о проведенных расследованиях для извлечения информации об индикаторах, артефактах и ТТР атакующих. Также для определения отрасли по которой работают злоумышленники
+**Материалы расследований** - обработка отчетов вендоров о проведенных расследованиях для извлечения информации об индикаторах, артефактах и ТТР атакующих. Также для определения отрасли по которой работают злоумышленники
     
-5. PoC
-    - Уже готовые Proof of Concept материалы на известные CVE, которые можно найти в открытых источниках, например репозитории GitHub. С помощью PoC можно зафиксировать, какие параметры системы жертвы уязвимы и являются целевыми
+**PoC** - уже готовые Proof of Concept материалы на известные CVE, которые можно найти в открытых источниках, например репозитории GitHub. С помощью PoC можно зафиксировать, какие параметры системы жертвы уязвимы и являются целевыми
 
 ## Применение фидов
 
-1. Snort
-    - Защищает определённый сегмент локальной сети от внешних атак из интернета. Система Snort выполняет протоколирование, анализ, поиск по содержимому, а также широко используется для активного блокирования или пассивного обнаружения целого ряда нападений и зондирований
+#### 1. Snort
 
-2. YARA
-    - В роли инструмента выполняет сигнатурный анализ на основе формальных YARA-правил. В них содержатся индикаторы компрометации для разных типов вредоносного ПО. Основная их задача — определять переменные в шаблонах, найденных в образце вредоносного ПО. При полном или частичном совпадении (в зависимости от конкретного правила) этот алгоритм может быть использован для успешной идентификации ВПО
+  - Защищает определённый сегмент локальной сети от внешних атак из интернета. Система Snort выполняет протоколирование, анализ, поиск по содержимому, а также широко используется для активного блокирования или пассивного обнаружения целого ряда нападений и зондирований
+
+#### 2. YARA
+
+  - В роли инструмента выполняет сигнатурный анализ на основе формальных YARA-правил. В них содержатся индикаторы компрометации для разных типов вредоносного ПО. Основная их задача — определять переменные в шаблонах, найденных в образце вредоносного ПО. При полном или частичном совпадении (в зависимости от конкретного правила) этот алгоритм может быть использован для успешной идентификации ВПО
     
-3. SIGMA
-    - "Sigma для логов — это как Snort для трафика или Yara для файлов". Специально созданный YAML файл, в котором указывается соответсвие используемых в правилах полей реальным данным в бэкенде. Задумывался он в качестве универсального формата описания правил детектирования, основанного на данных из логов
+#### 3. SIGMA
+
+  - "Sigma для логов — это как Snort для трафика или Yara для файлов". Специально созданный YAML файл, в котором указывается соответсвие используемых в правилах полей реальным данным в бэкенде. Задумывался он в качестве универсального формата описания правил детектирования, основанного на данных из логов
 
 ## Средства распространения
 
-1. Форматы фидов
-    - Фиды могут распространяться, например, в стандартных форматах JSON, XML, YAML. Преимуществом таких форматов будут являться простота воспрятия, поскольку такие языки являются текстовыми. Однако, последующее использование может быть затруднительным для использования платформой TI
-    
-    - На смену стандартным форматам пришли уже известные STIX 2.0 и TAXII, которые способны быть напрямую интегрированы в TIP. Так же большим плюсом будет визуализация, формат STIX позволяет отображать данные в виде графа
+#### 1. Форматы фидов
 
-2. Источники
-    - Фиды и правила для СЗИ могут распространяться на открытых ресурсах, одними из основных являются общедоступные git-репозитории. Стоит учитывать, что качество таких данных может быть на низком уровне
+  - Фиды могут распространяться, например, в стандартных форматах JSON, XML, YAML. Преимуществом таких форматов будут являться простота воспрятия, поскольку такие языки являются текстовыми. Однако, последующее использование может быть затруднительным для использования платформой TI
     
-    - Экспертные данные для TI, распространяемые на коммерческой основе являются более высокоуровневыми. АО "Перспективный мониторинг" предоставляет возможность получать актуальную и проверенную информацию в виде TI feeds, баз решающих правил для СЗИ и агрегированном представлении данных на TI Portal
+  - На смену стандартным форматам пришли уже известные STIX 2.0 и TAXII, которые способны быть напрямую интегрированы в TIP. Так же большим плюсом будет визуализация, формат STIX позволяет отображать данные в виде графа
+
+#### 2. Источники
+
+  - Фиды и правила для СЗИ могут распространяться на открытых ресурсах, одними из основных являются общедоступные git-репозитории. Стоит учитывать, что качество таких данных может быть на низком уровне
+    
+  - Экспертные данные для TI, распространяемые на коммерческой основе являются более высокоуровневыми. АО "Перспективный мониторинг" предоставляет возможность получать актуальную и проверенную информацию в виде TI feeds, баз решающих правил для СЗИ и агрегированном представлении данных на TI Portal
 
 ## Threat Intelligence Platform
 
