--- a/poster.Rmd
+++ b/poster.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Threat Intelligence
-poster_height: "56in"
+poster_height: "60in"
 poster_width: "54in"
 author:
   - name: I2z1
@@ -15,10 +15,11 @@ author:
 affiliation:
   - num: 1
     address: ИКБЦТ, РТУ МИРЭА
-font_family: 'tahoma'
+font_family: 'PT Sans Caption'
+#tahoma
 primary_colour: "#778899"
 secondary_colour: "#4682B4"
-main_width: 0.3
+main_width: 0.5
 main_fontfamily: "consolas"
 main_findings:
   - "Threat Intelligence"
